# Minimal-Fullstack-Blog

./: .gitignore  readme.md
blog-backend/: Dockerfile  cllient.py  docker-compose.yml  pyproject.toml
blog-backend/backend/: middleware.py  response.py  settings.py  urls.py
blog-backend/blog/: admin.py  models.py  serializers.py  urls.py  views.py
blog-backend/blog/migrations/: 0001_initial.py  0002_blog_author_blog_date_added_blog_date_updated.py  0003_remove_blog_date_added_remove_blog_date_updated.py  0004_remove_blog_author.py  0005_blog_author_blog_date_added_blog_date_updated.py  0006_blog_image.py  0007_alter_blog_image.py  0008_remove_blog_date_added_remove_blog_date_updated.py  0009_blog_date_added_blog_date_updated.py  0010_alter_blog_image.py
blog-backend/home/: __init__.py  models.py
blog-backend/user/: admin.py  models.py  serializers.py  urls.py  views.py
blog-backend/user/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_username.py  0003_alter_user_username.py  0004_alter_user_managers.py  0005_alter_user_password.py  0006_alter_user_email.py  0007_alter_user_options_remove_user_date_joined_and_more.py  0008_alter_user_options_alter_user_managers_and_more.py  0009_alter_user_managers_alter_user_email.py  0010_user_password2.py  0011_remove_user_password2.py
blog-frontend/: package-lock.json  package.json
blog-frontend/src/: app.html  hooks.server.js
blog-frontend/src/components/: Article.svelte  Button.svelte  Card.svelte  Header.svelte  Login.svelte  Logout.svelte  Navbar.svelte
blog-frontend/src/layouts/: Hero.svelte
(+20 files in other folders)
